kustomize/apps/erddap/base/erddap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erddap
spec:
  selector:
    app: erddap
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
