kustomize/apps/erddap/base/erddap-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: erddap-stripprefix
  # namespace: mspbase01-system
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  stripPrefix:
    prefixes:
      - /msp/data
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: erddap
  # namespace: mspbase01-system

spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/msp/data`)
    kind: Rule
    services:
    - name: erddap
      port: 80
    middlewares:
    - name: erddap-stripprefix
      # namespace: mspbase01-system
