kustomize/apps/erddap/base/erddap-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: erddap-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /envds/data
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: erddap
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/envds/data`)
    kind: Rule
    services:
    - name: erddap
      port: 80
      passHostHeader: true
    middlewares:
    - name: erddap-stripprefix
